src/objects/Stay_In_Touch_Request__c.object
<CustomObject>
    <description>Contains all information pertaining to a specific Stay In Touch request by a user to a Contact.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The parent Contact record</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stay In Touch Requests</relationshipLabel>
        <relationshipName>Stay_In_Touch_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <defaultValue>&quot;Staying in touch&quot;</defaultValue>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Stay In Touch Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Subject__c</columns>
        <columns>Signature__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SIT-{0}</displayFormat>
        <label>Stay In Touch Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stay In Touch Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>